--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,13 @@
     "description": "N/A",
     "type": "magento2-module",
     "require": {
+        "php": ">=8.1",
         "magento/framework": "*",
         "magento/module-catalog": "*",
         "magento/module-eav": "*",
-        "mateuszmesek-magento2/module-document-data-eav-api": "*",
-        "mateuszmesek-magento2/module-document-data-index-mview": "*"
+        "magento/module-store": "*",
+        "mateuszmesek-magento2/module-document-data-eav-api": "^1.0",
+        "mateuszmesek-magento2/module-document-data-index-mview": "^1.0"
     },
     "license": [
         "MIT"
@@ -17,7 +19,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "MateuszMesek\\DocumentDataCatalogCategoryMview\\": "src"
+            "MateuszMesek\\DocumentDataCatalogCategoryMview\\": ""
         }
     }
 }
